* Fix the problam that wallet is wrongly calculated (#28)

rel 20.5.0
* Include sysuser to log messages when executed from cli
* Faster graph traversal, limit logging
* Faster log rotating
* Fix text messages

rel 20.4.3
* chroust: verify conditions
* schedule hint/solutions according to start_time instead of current time on start
* HQ:main screen - fixed table header positioning

rel 20.4.2
* delete session on logout
* chroust: invalid interpretation of clue_IDs=L if there are more hints

rel 20.4.1
* fix problem that attributes set in [traccar_zones] metadata section are not respected
* HQ:main screen - use full width of the browser window
* check_location: return error when zone have neither key nor message defined
* Improve LOCATION_CHECK events
* HQ:set position screen display also matching zones
* chroust: print zone summary
* chroust: adding check that there is either a key or a message specified for each zone

rel 20.4.0
* fix rank table is generation (#25)
* Allow negative coin values
* Include team name in log messages
* Ability to use tracker to verify location
* HQ: event log - Team_logged event not contain info (#23)
* duplicite keys in log 'err key entered' (#4)
* Bombs
* Wrapper CLI script installed to the executable PATH
* change version number scheme to year.month.release

rel 0.2.10
* fix permissions for /var/lib/iquest/smarty dir (#14)
* alow negative values of gained coins

rel 0.2.9
* chroust: adding replacements <hint-cnt> and <timeout> to text files
* Play audio/video directly in browser using HTML5 (#3)
* chroust: suppress WARNING: clue_IDs are not specified for hint '0' (#9)
* chroust: ability to define initial value for user wallet (#11)
* chroust: Unexpected exception if there is unknown option (#20)
* Directory /var/lib/serweb-frmwrk/smarty/ might be created with wrong permissions (#14)

rel 0.2.8
* HQ event log: filter - log type - allow multiple selection (#6)