@@ -82,6 +82,10 @@
 ; Required
 ;
 ;key=i.q:top secret key
+;key=abcdefgh|hgfedcba      - regexp example
+
+; Whether the key field above contain regexp. The regexp have to match canonicalized keys.
+;key_regexp=0
 
 ; ID of next clue group that is opened by solving this solution.
 ; Multiple values could be specified.
