@@ -22,7 +22,7 @@ $lang_str['iquest_your_position'] =                     "Vaše poloha";
 $lang_str['iquest_err_internal_error'] =                "Internal error. Check log for details.";
 $lang_str['iquest_err_key_invalid'] =                   "Sorry, tento kód není správně.";
 $lang_str['iquest_err_key_empty'] =                     "Nevyplnil jste kód řešení úkolu.";
-$lang_str['iquest_err_key_dup'] =                       "Tento kód už jste zadal a úkol máte vyřešený";
+$lang_str['iquest_err_key_dup'] =                       "Kód pro tento úkol byl již zadán. Úkol máte vyřešený.";
 $lang_str['iquest_err_key_not_reachable'] =             "Tento kód je sice platný, nicméně ještě jste k němu nezískali žádnou indicii, proto jej nelze zadat.";
 $lang_str['iquest_err_contest_over'] =                  "Soutěž skončila!";
 $lang_str['iquest_err_no_hint_for_sale'] =              "Žádná další nápověda pro tento úkol není na prodej.";
